--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#instagram"></use>
+                        <use href="images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
                     <a class="icon-social" href="#">
-                      <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#twitter"></use>
+                      <svg class="icon-redes">>
+                        <use href="images/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,7 +190,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#linkedin"></use>
+                        <use href="images/svg/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
