--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         <li>
           <a class="email" href="info@devstudio.com">
             <svg class="sobre">
-              <use href="./images/icons.svg#sobre"></use>
+              <use href="/images/icons.svg#sobre"></use>
             </svg>
             info@devstudio.com
           </a>
@@ -42,7 +42,7 @@
         <li>
           <a class="telefono" href="tel:+525555296000">
             <svg class="telefono">
-              <use href="./images/icons.svg#telefono"></use>
+              <use href="/images/icons.svg#telefono"></use>
             </svg>
             +52 55 5529 6000
           </a>
@@ -68,7 +68,7 @@
           <div class="Portafolio-card">
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/screen.jpg" alt="monitor del computador " width="370" />
+                <img src="images/screen.jpg" alt="monitor del computador " width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Tecnoduck es una plataforma de distribución de coronavirus
@@ -85,7 +85,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/basketball.jpg" alt="jugador" width="370" />
+                <img src="/images/basketball.jpg" alt="jugador" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
@@ -101,7 +101,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/restaurant.jpg" alt="restaurante" width="370" />
+                <img src="/images/restaurant.jpg" alt="restaurante" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,ure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
@@ -115,7 +115,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/headphones.jpg" alt="audifonos" width="370" />
+                <img src="/images/headphones.jpg" alt="audifonos" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
@@ -129,7 +129,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/boxes.jpg" alt="cajas" width="370" />
+                <img src="/images/boxes.jpg" alt="cajas" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
@@ -143,7 +143,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="./Images/blackscreen.jpg" alt="image13" width="370" />
+                <img src="./images/blackscreen.jpg" alt="image13" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -160,7 +160,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/book.jpg" alt="libro abierto" width="370" />
+                <img src="/images/book.jpg" alt="libro abierto" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -174,7 +174,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/letters.jpg" alt="etiquetas en letras" width="370" />
+                <img src="/images/letters.jpg" alt="etiquetas en letras" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -188,7 +188,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/Images/computer.jpg" alt="computador a la mano" width="370" />
+                <img src="/images/computer.jpg" alt="computador a la mano" width="370" />
                 <div class="card-animation">
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
                   </p>
@@ -234,7 +234,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#instagram"></use>
+                  <use href="images/svg/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
@@ -242,7 +242,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#twitter"></use>
+                  <use href="images/svg/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
@@ -250,7 +250,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#facebook"></use>
+                  <use href="images/svg/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
@@ -258,7 +258,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#linkedin"></use>
+                  <use href="images/svg/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
