--- a/portfolio.html
+++ b/portfolio.html
@@ -21,34 +21,36 @@
   </head>
   <body>
     <!--encabezado de la pagina con listas de navegacion -->
-    <header>
-      <nav>
-        <a href="index.html">WebStudio</a>
-        <ul>
-          <li><a href="index.html">Estudio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#contact">Сontactos</a></li>
-        </ul>
-      </nav>
-      <ul class="header-info">
-        <li>
-          <a class="email" href="info@devstudio.com">
-            <svg class="sobre">
-              <use href="/images/icons.svg#sobre"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li>
-          <a class="telefono" href="tel:+525555296000">
-            <svg class="telefono">
-              <use href="/images/icons.svg#telefono"></use>
-            </svg>
-            +52 55 5529 6000
-          </a>
-        </li>
+  <!--encabezado de la pagina con listas de navegacion -->
+  <header>
+    <nav>
+      <a href="index.html">WebStudio</a>
+      <ul>
+        <li><a href="index.html">Estudio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="#contact">Сontactos</a></li>
       </ul>
-    </header>
+    </nav>
+    <!--telefono y email-->
+    <ul class="header-info">
+      <li>
+        <a class="email" href="info@devstudio.com">
+          <svg class="sobre">
+            <use href="./images/icons.svg#sobre"></use>
+          </svg>
+          info@devstudio.com
+        </a>
+      </li>
+      <li>
+        <a class="telefono" href="tel:+525555296000">
+          <svg class="telefono">
+            <use href="./images/icons.svg#telefono"></use>
+          </svg>
+          +52 55 5529 6000
+        </a>
+      </li>
+    </ul>
+  </header>
     <!--menu-->
     <main>
       <ul>
@@ -85,7 +87,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/basketball.jpg" alt="jugador" width="370" />
+                <img src="images/basketball.jpg" alt="jugador" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
@@ -101,7 +103,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/restaurant.jpg" alt="restaurante" width="370" />
+                <img src="images/restaurant.jpg" alt="restaurante" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,ure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
@@ -115,7 +117,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/headphones.jpg" alt="audifonos" width="370" />
+                <img src="images/headphones.jpg" alt="audifonos" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
@@ -129,7 +131,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/boxes.jpg" alt="cajas" width="370" />
+                <img src="images/boxes.jpg" alt="cajas" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
@@ -143,7 +145,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="./images/blackscreen.jpg" alt="image13" width="370" />
+                <img src="images/blackscreen.jpg" alt="image13" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -160,7 +162,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/book.jpg" alt="libro abierto" width="370" />
+                <img src="images/book.jpg" alt="libro abierto" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -174,7 +176,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/letters.jpg" alt="etiquetas en letras" width="370" />
+                <img src="images/letters.jpg" alt="etiquetas en letras" width="370" />
                 <div class="card-animation">
                   <p class="card-text">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -188,7 +190,7 @@
             </div>
             <div class="card-container">
               <div class="card-image">
-                <img src="/images/computer.jpg" alt="computador a la mano" width="370" />
+                <img src="images/computer.jpg" alt="computador a la mano" width="370" />
                 <div class="card-animation">
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
                   </p>
