--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#facebook"></use>
+                        <use href="images/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -211,7 +211,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#instagram"></use>
+                        <use href="images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,7 +219,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#twitter"></use>
+                        <use href="images/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -227,7 +227,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#facebook"></use>
+                        <use href="images/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -235,7 +235,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#linkedin"></use>
+                        <use href="images/svg/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -257,7 +257,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#instagram"></use>
+                        <use href="images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -265,7 +265,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#twitter"></use>
+                        <use href="images/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,7 +273,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#facebook"></use>
+                        <use href="images/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -281,7 +281,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#linkedin"></use>
+                        <use href="images/svg/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -305,7 +305,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#instagram"></use>
+                        <use href="images/svg/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -313,7 +313,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#twitter"></use>
+                        <use href="images/svg/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -321,7 +321,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#facebook"></use>
+                        <use href="images/svg/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -329,7 +329,7 @@
                   <li>
                     <a class="icon-social" href="#">
                       <svg class="icon-redes">
-                        <use href="images/SVG/icons.svg#linkedin"></use>
+                        <use href="images/svg/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -346,32 +346,32 @@
         <ul class="customer-list">
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente1"></use>
+              <use href="images/svg/icons.svg#cliente1"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente2"></use>
+              <use href="images/svg/icons.svg#cliente2"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente3"></use>
+              <use href="images/svg/icons.svg#cliente3"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente4"></use>
+              <use href="images/svg/icons.svg#cliente4"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente5"></use>
+              <use href="images/svg/icons.svg#cliente5"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-customer">
-              <use href="images/SVG/icons.svg#cliente6"></use>
+              <use href="images/svg/icons.svg#cliente6"></use>
             </svg>
           </li>
         </ul>
@@ -408,7 +408,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#instagram"></use>
+                  <use href="images/svg/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
@@ -416,7 +416,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#twitter"></use>
+                  <use href="images/svg/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
@@ -424,7 +424,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#facebook"></use>
+                  <use href="images/svg/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
@@ -432,7 +432,7 @@
             <li>
               <a class="iconos-sociales" href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="images/SVG/icons.svg#linkedin"></use>
+                  <use href="images/svg/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
